0.2.0 (unreleased)
==================

  - Added irc options so you can attach an irc bot to the master buildbot
    [mustapha]

  - Allow public_html customization [gawel]

  - Added custom about page to link to collective.buildout [gawel]

  - Added support for Git repositories [dokai]

  - Refactored the repository URL configuration. For Subversion, you
    should use only the ``repository`` option to specify a full URL to
    the desired branch (trunk, tag or branch) that will be built. For
    Git in addition to setting the ``repository`` option you can use
    the ``branch`` option to specify a specific branch to build. By
    default the ``master`` branch will be used for Git
    repositories. [dokai]

  - Cleaned up a lot of redundant imports. [dokai]

  - Updated the documentation and examples. [dokai]

  - Deprecated the collective.buildbot:projects recipe [dokai]

  - Fixed problem with missing twistd.log files on first run [dokai]

  - Fixed bug that prevented the master from starting if there weren't
    any SVN pollers configured. [dokai]


0.1.1 (2008-05-02)
==================

  - bugs fixes [gawel]

0.1.0 (xxxx-xx-xx)
==================

 - Created recipe with ZopeSkel [Gael Pasgrimaud].